@@ -1,3 +1,9 @@
+5 March 2007
++ Changed control panel icon
++ Changed backLink call to definite url to prevent loops.
++ Added ability to uninstall a module despite dependency settings.
+
+
 Version 2.0.0
 ------------------------------------------------------
 
